session: don't request Keep-Alive for upgraded connections

When an upgrade is requested through "Connection: Upgrade" (used for
setting up websocket connection for example), there is no need to
request Keep-Alive.

It turns out doing both is confusing some servers based on the h2o
library.

https://bugzilla.gnome.org/show_bug.cgi?id=788723